--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 PORT=3000
 MONGO_URI=mongodb+srv://khattabk205:admin1234@chatapp.zb1g3.mongodb.net/chatApp
+ENV_MODE=DEV
+SALT_ROUND=6
+TOKEN_SIGNATURE=token
