--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
-    "socket.io": "2.3.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -27,7 +27,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.3.0",
-    "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
