--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,13 @@ yarn-error.*
 *.pem
 
 # local env files
-# .env*.local
+.env*.local
 
 # typescript
 *.tsbuildinfo
 
 app-example
+
+# generated native folders
+/ios
+/android
